# MRM_IhitAcharya

./: Ihit_R_Acharya_Report_5.docx  Ihit_R_Acharya_Report_6.docx  OA_Task.docx  Task_1.md  Task_3.md  Task_4_5.md  task_3.md
C++course/Week1/Assignmentweek1/module1/: q1.cpp  q2.cpp  q3.cpp  q4.cpp  q5.cpp
C++course/Week1/Assignmentweek1/module2/: q2.cpp  q3.cpp  q4.cpp  q5.cpp
C++course/Week1/Assignmentweek1/module3/: q1.cpp  q2.cpp  q3.cpp  q4.cpp  q5.cpp
C++course/Week1/Assignmentweek1/module4/: q1.cpp  q2.cpp  q3.cpp  q4.cpp  q5.cpp
GitHub_task/: Github_task.c
ROS_Tasks/ATT_Task/: README.md
ROS_Tasks/ATT_Task/gazebo/launch/: complete_launch.py  gaz_rviz_ATT.py  gazebo_launch.py
ROS_Tasks/ATT_Task/gazebo/model/: rover.gazebo  rover.xacro  world.world
ROS_Tasks/ATT_Task/gazebo/src/: gps.cpp
ROS_Tasks/Global_Planner/: README.md  README2.md  README3.md
ROS_Tasks/Global_Planner/gazebo/: CMakeLists.txt  package.xml
ROS_Tasks/Global_Planner/gazebo/launch/: complete_launch.py
ROS_Tasks/Global_Planner/log/: latest_list
ROS_Tasks/Global_Planner/rover/: CMakeLists.txt  package.xml
ROS_Tasks/Global_Planner/rover/launch/: complete_launch.py
ROS_Tasks/Global_Planner/rover/log/: latest_list
ROS_Tasks/Global_Planner/rover/model/: rover.gazebo  rover.xacro
ROS_Tasks/Global_Planner/rover/rviz/: custom_config.rviz
ROS_Tasks/Global_Planner/rover/src/: gps.cpp  gps2.cpp
ROS_Tasks/Obstacle_Avoidance/: READ_ME.md
ROS_Tasks/Obstacle_Avoidance/rover/: CMakeLists.txt  package.xml
ROS_Tasks/Obstacle_Avoidance/rover/launch/: complete_launch.py
ROS_Tasks/Obstacle_Avoidance/rover/model/: rover.gazebo  rover.xacro  world.world  world2.world
ROS_Tasks/Obstacle_Avoidance/rover/src/: gps.cpp  gps2.cpp  obstacle_avoidance.cpp
cashier_system/: README.md
cashier_system/ros_ws3/install/: local_setup.sh  setup.sh
cashier_system/ros_ws3/install/disp_pkg/lib/disp_pkg/: disp_node
cashier_system/ros_ws3/install/disp_pkg/share/disp_pkg/: package.bash  package.dsv  package.ps1  package.sh  (+2 more)
cashier_system/ros_ws3/log/: latest_build  latest_list
cashier_system/ros_ws3/src/disp_pkg/: CMakeLists.txt
cashier_system/ros_ws3/src/disp_pkg/src/: disp_node.cpp
cashier_system/ros_ws3/src/pub_pkg/: CMakeLists.txt
cashier_system/ros_ws3/src/pub_pkg/src/: pub_node.cpp
cashier_system/ros_ws3/src/sub_pkg/: CMakeLists.txt
cashier_system/ros_ws3/src/sub_pkg/src/: sub_node.cpp
cashier_system/ros_ws3/src/tutorial_interfaces/: CMakeLists.txt
rover_ws/install/: local_setup.sh  setup.sh
rover_ws/install/gazebo/lib/gazebo/: sensor  sensors
rover_ws/install/gazebo/share/gazebo/: package.sh  package.xml
rover_ws/log/: latest_build  latest_list
rover_ws/src/gazebo/: CMakeLists.txt
rover_ws/src/gazebo/model/: rover.gazebo  rover.xacro
rover_ws/src/gazebo/src/: sensors.cpp
(+45 files in other folders)
